k8s/using-nfs/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: pg-dev
  labels:
    environment: dev
