k8s/using-nfs/headless-service copy.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: pg-dev
spec:
  clusterIP: None
  selector:
    app: postgres
  ports:
    - port: 5432
      name: postgres
