k8s/using-nfs/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-svc
  namespace: pg-dev
  labels:
    app: postgres
    environment: dev
spec:
  type: LoadBalancer
  selector:
    app: postgres
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
      name: postgres-svc
