k8s/using-nfs/ingressroutetcp.yaml
# Decided to use service of type load balancer

apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: postgres-tcp
  namespace: pg-dev
spec:
  entryPoints:
    - postgres-tcp    
  routes:
    - match: HostSNI(`*`) 
      services:
        - name: postgres-svc
          port: 5432
